test/Fail/Issue2169.err
Issue2169.agda:17.7-11: error: [UnequalTerms]
The terms
  0
and
  -0
are not equal at type Float
when checking that the expression refl has type 0 ≡ -0
